fix & add pages
