# openapi.yaml
@@ -6,7 +6,7 @@ info:
     title: ""
     version: 0.0.1
 paths:
-    /industry/v1/categories:
+    /v1/categories:
         get:
             tags:
                 - Industry
@@ -19,7 +19,7 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/isms.v1.ListCategoriesResp'
-    /industry/v1/categories/{categoryCode}/subcategories:
+    /v1/categories/{categoryCode}/subcategories:
         get:
             tags:
                 - Industry
@@ -38,7 +38,121 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/isms.v1.GetSubcategoriesResp'
-    /industry/v1/developers:
+    /v1/countries:
+        get:
+            tags:
+                - Country
+            description: 分页查询国家列表
+            operationId: Country_ListCountries
+            parameters:
+                - name: page
+                  in: query
+                  schema:
+                    type: integer
+                    format: uint32
+                - name: pageSize
+                  in: query
+                  schema:
+                    type: integer
+                    format: uint32
+                - name: keyword
+                  in: query
+                  schema:
+                    type: string
+                - name: continent
+                  in: query
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/isms.v1.ListCountriesResp'
+        post:
+            tags:
+                - Country
+            description: 创建国家
+            operationId: Country_CreateCountry
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/isms.v1.CreateCountryReq'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/isms.v1.CountryResp'
+    /v1/countries/{id}:
+        get:
+            tags:
+                - Country
+            description: 查询单个国家
+            operationId: Country_GetCountry
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: integer
+                    format: uint32
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/isms.v1.CountryResp'
+        put:
+            tags:
+                - Country
+            description: 更新国家
+            operationId: Country_UpdateCountry
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: integer
+                    format: uint32
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/isms.v1.UpdateCountryReq'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/isms.v1.CountryResp'
+        delete:
+            tags:
+                - Country
+            description: 删除国家
+            operationId: Country_DeleteCountry
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: integer
+                    format: uint32
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/isms.v1.DeleteCountryResp'
+    /v1/developers:
         get:
             tags:
                 - Developer
@@ -89,7 +203,7 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/isms.v1.DeveloperResp'
-    /industry/v1/developers/{id}:
+    /v1/developers/{id}:
         get:
             tags:
                 - Developer
@@ -102,6 +216,31 @@ paths:
                   schema:
                     type: integer
                     format: uint32
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/isms.v1.DeveloperResp'
+        put:
+            tags:
+                - Developer
+            description: 更新开发商
+            operationId: Developer_UpdateDeveloper
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: integer
+                    format: uint32
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/isms.v1.UpdateDeveloperReq'
+                required: true
             responses:
                 "200":
                     description: OK
@@ -214,6 +353,37 @@ paths:
                                 $ref: '#/components/schemas/isms.v1.UpdateSoftwareResp'
 components:
     schemas:
+        isms.v1.CountryResp:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: uint32
+                nameZh:
+                    type: string
+                nameEn:
+                    type: string
+                code:
+                    type: string
+                continent:
+                    type: string
+                createdAt:
+                    type: string
+                updatedAt:
+                    type: string
+            description: 单个国家响应
+        isms.v1.CreateCountryReq:
+            type: object
+            properties:
+                nameZh:
+                    type: string
+                nameEn:
+                    type: string
+                code:
+                    type: string
+                continent:
+                    type: string
+            description: 创建国家请求
         isms.v1.CreateDeveloperReq:
             type: object
             properties:
@@ -265,6 +435,14 @@ components:
                 message:
                     type: string
             description: 创建软件响应
+        isms.v1.DeleteCountryResp:
+            type: object
+            properties:
+                success:
+                    type: boolean
+                message:
+                    type: string
+            description: 删除国家响应
         isms.v1.DeveloperResp:
             type: object
             properties:
@@ -362,6 +540,23 @@ components:
                     items:
                         $ref: '#/components/schemas/isms.v1.IndustryCategory'
             description: 所有大类的查询结果
+        isms.v1.ListCountriesResp:
+            type: object
+            properties:
+                items:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/isms.v1.CountryResp'
+                total:
+                    type: integer
+                    format: uint32
+                page:
+                    type: integer
+                    format: uint32
+                pageSize:
+                    type: integer
+                    format: uint32
+            description: 国家列表响应
         isms.v1.ListDevelopersResp:
             type: object
             properties:
@@ -395,6 +590,39 @@ components:
                     type: integer
                     format: int32
             description: 查询软件响应
+        isms.v1.UpdateCountryReq:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: uint32
+                nameZh:
+                    type: string
+                nameEn:
+                    type: string
+                code:
+                    type: string
+                continent:
+                    type: string
+            description: 更新国家请求
+        isms.v1.UpdateDeveloperReq:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: uint32
+                nameZh:
+                    type: string
+                nameEn:
+                    type: string
+                countryId:
+                    type: integer
+                    format: uint32
+                website:
+                    type: string
+                description:
+                    type: string
+            description: 更新开发商的请求参数
         isms.v1.UpdateSoftwareReq:
             type: object
             properties:
@@ -434,9 +662,11 @@ components:
                     type: string
             description: 更新软件响应
 tags:
+    - name: Country
+      description: 国家
     - name: Developer
-      description: 开发商服务
+      description: 开发商
     - name: Industry
-      description: 行业分类服务
+      description: 行业分类
     - name: Software
-      description: 工业软件服务接口
+      description: 工业软件
